<resources>
    <string name="app_name">Lodgebook</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">546941588984757</string>
    <string name="fb_login_protocol_scheme">fb546941588984757</string>

    <!-- String Resources for Login/SignUp Activities -->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="register_account">Register a new account</string>

    <string name="login_error_message">E-Mail/Password Fields must not be empty!</string>
    <string name="login_error_title">Whoops!</string>
    <string name="login_button_label">Login</string>

    <string name="signup_error_message">E-Mail/Password Fields must not be empty!</string>
    <string name="signup_error_title">Whoops!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="signup_button">Register</string>

    <string name="action_logout">Logout</string>

    <!-- String Resources for Activities -->
    <string name="spinner_init">Please select a lodge...</string>
    <string name="add_lodge_button">Create A New Lodge!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
